--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Data Explorer Dash App - Coder's Blog
+description: Bookmark this to follow the latest on building of the data explorer app on Dash
